# emojicode

./: README.md  pyproject.toml
emojicode/: __init__.py  __main__.py
emojicode/encoder/: __init__.py  base.py  salted.py  salted_hashed.py  simple.py
